@@ -1,6 +1,17 @@
 CHANGE LOG
 ----------
 
+	home.js
+	-------
+		### UPDATES - 4/23/2018 ###
+		#
+		#	maintab_sel(...)
+		#		included active Tab highlighting, added index parameter
+		#
+		#	added infotab_sel(...)
+		#		need to implement expand() and collapse()
+		
+
 	menu-1.3.py
 	-----------
 		### UPDATES - 7/14/2017 ###
